# gradebook

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.envs/: .django.env  .postgres.env
gradebook/: Dockerfile  db.sqlite3
gradebook/grade/: models.py  views.py
gradebook/gradebook/: asgi.py  settings.py  urls.py  wsgi.py
postgresql/: Dockerfile
scripts/: start_django.sh
