[tool.poetry]
name = "gradebook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.4"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
gunicorn = "^20.1.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"
pytest = "^6.2.4"
autopep8 = "^1.5.7"
ipython = "^7.25.0"
jedi = "0.17.2"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"
django-stubs = "^1.8.0"
mypy = "^0.910"
djangorestframework-stubs = "^1.4.0"
isort = "^5.9.1"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
